--- a/index.html
+++ b/index.html
@@ -17,283 +17,264 @@
 </head>
 
 <body>
-  <section>
-    <div class="top">
-      <h3>#Ioaspettoacasa.it</h3>
-      <h1>camerano</h1>
-    </div>
-    <div id="main-img-container" class="main">
-      <div class="img-container">
-        <img class="main-img" src="./img/sfondo-colori.jpg" alt="">
+  <div id="container-main">
+    <section>
+      <div class="top">
+        <h3>#Ioaspettoacasa.it</h3>
+        <h1>camerano</h1>
       </div>
-    </div>
-    <div class="bottom">
-      <nav class="main-nav">
-        <a href="#nav-negozi"><i class="fas fa-hand-point-down"></i>...Negozi</a>
-        <a href="#nav-ristoranti"><i class="fas fa-hand-point-down"></i>...Ristoranti</a>
+      <div id="main-img-container" class="main">
+        <div class="img-container">
+          <img class="main-img" src="./img/sfondo-colori.jpg" alt="">
+        </div>
+      </div>
+      <div class="bottom">
+        <nav class="main-nav">
+          <a href="#nav-negozi"><i class="fas fa-hand-point-down"></i>...Negozi</a>
+          <a href="#nav-ristoranti"><i class="fas fa-hand-point-down"></i>...Ristoranti</a>
+      </div>
+    </section>
+    <section id="section2">
+      <nav id="nav-negozi" class="nav">
+        <h3 class="info">Negozi aperti che consegnano a domicilio</h3>
+        <a href="#ristoranti">vedi anche i ristoranti</a>
       </nav>
-      <!-- <a href="#nav">
-        <i class="fas fa-hand-point-down"></i>
-      </a> -->
-    </div>
-  </section>
-  <section id="section2">
-    <nav id="nav-negozi" class="nav">
-      <h3 class="info">Informazioni su negozi aperti che consegnano a domicilio</h3>
-      <a href="#ristoranti">Ristoranti</a>
-    </nav>
-    <table id="negozi" style="width:100%">
-      <thead class="head">
-        <tr>
-          <th>Negozio</th>
-          <th>Info</th>
-          <th>Contatto</th>
-        </tr>
-      </thead>
-      <tbody>
+      <table id="negozi" style="width:100%">
+        <thead class="head">
+          <tr>
+            <th>Negozio</th>
+            <th>Info</th>
+            <th>Contatto</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><a class="store-name" href="https://www.facebook.com/aziendamagnaterra/">Supermercato Coal</a></td>
+            <td>
+              <h6>Città</h6>
+              <p>Camerano</p>
+              <h6>Categoria</h6>
+              <p>Alimentari</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+39071 731982">071.731982</a></i>
+            </td>
+          </tr>
+          <tr>
+            <td><a class="store-name" href="https://www.marchesalumi.com">Marche salumi</a></td>
+            <td>
+              <h6>Città</h6>
+              <p>Camerano</p>
+              <h6>Categoria</h6>
+              <p>Alimentari</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+39071959695">071.959695</a></i>
+              <i class="fas fa-mobile-alt"><a href="tel:+393339736218">333.9736218</a></i>
+            </td>
+          </tr>
 
-        <tr>
-          <td><a class="store-name" href="https://www.bottegadellabirra.com/">Bottega della birra</a></td>
-          <td>
-            <h6>Città</h6>
-            <p> Castelfidardo</p>
-            <h6>Categoria</h6>
-            <p>Birra e Alimentari</p>
-          </td>
-          <td>
-            <h6>Moreno</h6>
-            <i class="fas fa-mobile-alt"><a href="tel:+393496237510">3496237510</a></i>
-            <h6>Alessandro</h6>
-            <i class="fas fa-mobile-alt"><a href="tel:+39347 9971569">3479971569</a></i>
-          </td>
-        </tr>
+          <tr>
+            <td><a class="store-name" href="https://www.facebook.com/Pescheria-da-Giuseppe-372848066825019">Pescheria da
+                Giuseppe</a></td>
+            <td>
+              <h6>Città</h6>
+              <p>Camerano</p>
+              <h6>Categoria</h6>
+              <p>Pesce</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+39071731366">071.731366</a></i>
+              <i class="fas fa-mobile-alt"><a href="tel:+393471134336">347.1134336</a></i>
+            </td>
+          </tr>
 
-        <tr>
-          <td><a class="store-name" href="https://www.facebook.com/verduzzi/">Verduzzi</a></td>
-          <td>
-            <h6>Città</h6>
-            <p> Castelfidardo</p>
-            <h6>Categoria</h6>
-            <p>Ortofrutta</p>
-          </td>
-          <td>
-            <i class="fas fa-mobile-alt"><a href="tel:+390712112370">0712112370</a></i>
+          <tr>
+            <td><a class="store-name" href="https://www.facebook.com/Pescheria-da-Giuseppe-372848066825019">Az.Agricola
+                Mercante</a></td>
+            <td>
+              <h6>Città</h6>
+              <p>Camerano</p>
+              <h6>Categoria</h6>
+              <p>Vino</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+39071732050">071.732050</a></i>
+              <i class="fas fa-mobile-alt"><a href="tel:+39336631167 ">336.631167</a></i>
+              <i class="fab fa-whatsapp"><a href="https://wa.me/+39336631167 ">336.631167</a></i>
+              <i class="fab fa-telegram"><a href="tg:39336631167 ">336.631167</a></i>
+            </td>
+          </tr>
 
-          </td>
-        </tr>
+          <tr>
+            <td><a class="store-name" href="https://www.mentelocale.bio">Mente locale</a></td>
+            <td>
+              <h6>Città</h6>
+              <p>Camerano</p>
+              <h6>Categoria</h6>
+              <p>Alimentari</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+393407214009">340.7214009</a></i>
+            </td>
+          </tr>
 
-        <tr>
-          <td><a class="store-name" href="https://www.facebook.com/aziendamagnaterra/">Az. Agricola Magnaterra</a></td>
-          <td>
-            <h6>Città</h6>
-            <p> Castelfidardo</p>
-            <h6>Categoria</h6>
-            <p>Alimentari</p>
-          </td>
-          <td>
-            <i class="fas fa-mobile-alt"><a href="tel:+393397392495">3397392495</a></i>
-          </td>
-        </tr>
+          <tr>
+            <td><a class="store-name" href="#">Top frutta</a></td>
+            <td>
+              <h6>Città</h6>
+              <p>Camerano</p>
+              <h6>Categoria</h6>
+              <p>Ortofrutta</p>
+            </td>
+            <td>
+              Qui verranno inseriti i link appena possibile.
+              <!-- <i class="fas fa-mobile-alt"><a href="tel:+393407214009">340.7214009</a></!-->
+            </td>
+          </tr>
+          <tr>
+            <td><a class="store-name" href="https://www.maxigarden.it">Maxigarden</a></td>
+            <td>
+              <h6>Città</h6>
+              <p> Camerano</p>
+              <h6>Categoria</h6>
+              <p>Giardinaggio etc.</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+390717108419">071.7108419</a></i>
+              <i class="fas fa-mobile-alt"><a href="tel:+393317772068">331.7772068</a></i>
+            </td>
+          </tr>
+          <tr>
+            <td><a class="store-name" href="https://www.bottegadellabirra.com/">Bottega della birra</a></td>
+            <td>
+              <h6>Città</h6>
+              <p> Castelfidardo</p>
+              <h6>Categoria</h6>
+              <p>Birra e Alimentari</p>
+            </td>
+            <td>
+              <h6>Moreno</h6>
+              <i class="fas fa-mobile-alt"><a href="tel:+393496237510">3496237510</a></i>
+              <h6>Alessandro</h6>
+              <i class="fas fa-mobile-alt"><a href="tel:+39347 9971569">3479971569</a></i>
+            </td>
+          </tr>
 
-        <tr>
-          <td><a class="store-name" href="https://www.facebook.com/aziendamagnaterra/">Camilletti</a></td>
-          <td>
-            <h6>Città</h6>
-            <p> Castelfidardo</p>
-            <h6>Categoria</h6>
-            <p>Enoteca</p>
-          </td>
-          <td>
-            <i class="fas fa-mobile-alt"><a href="tel:+390717822475">071 782 2475</a></i>
-          </td>
-        </tr>
+          <tr>
+            <td><a class="store-name" href="https://www.facebook.com/verduzzi/">Verduzzi</a></td>
+            <td>
+              <h6>Città</h6>
+              <p> Castelfidardo</p>
+              <h6>Categoria</h6>
+              <p>Ortofrutta</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+390712112370">0712112370</a></i>
 
-        <tr>
-          <td><a class="store-name" href="https://www.maxigarden.it">Maxigarden</a></td>
-          <td>
-            <h6>Città</h6>
-            <p> Camerano</p>
-            <h6>Categoria</h6>
-            <p>Giardinaggio etc.</p>
-          </td>
-          <td>
-            <i class="fas fa-mobile-alt"><a href="tel:+390717108419">071.7108419</a></i>
-            <i class="fas fa-mobile-alt"><a href="tel:+393317772068">331.7772068</a></i>
-          </td>
-        </tr>
+            </td>
+          </tr>
 
-        <tr>
-          <td><a class="store-name" href="https://www.facebook.com/aziendamagnaterra/">Supermercato Coal</a></td>
-          <td>
-            <h6>Città</h6>
-            <p>Camerano</p>
-            <h6>Categoria</h6>
-            <p>Alimentari</p>
-          </td>
-          <td>
-            <i class="fas fa-mobile-alt"><a href="tel:+39071 731982">071.731982</a></i>
-          </td>
-        </tr>
+          <tr>
+            <td><a class="store-name" href="https://www.facebook.com/aziendamagnaterra/">Az. Agricola Magnaterra</a>
+            </td>
+            <td>
+              <h6>Città</h6>
+              <p> Castelfidardo</p>
+              <h6>Categoria</h6>
+              <p>Alimentari</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+393397392495">3397392495</a></i>
+            </td>
+          </tr>
 
-        <tr>
-          <td><a class="store-name" href="http://www.giampaolidolciaria.eu/">Giampaoli dolciaria</a></td>
-          <td>
-            <h6>Città</h6>
-            <p>Ancona</p>
-            <h6>Categoria</h6>
-            <p>Dolciaria</p>
-          </td>
-          <td>
-            <i class="fas fa-mobile-alt"><a href="tel:+390718047093">071.8047093</a></i>
-          </td>
-        </tr>
+          <tr>
+            <td><a class="store-name" href="https://www.facebook.com/aziendamagnaterra/">Camilletti</a></td>
+            <td>
+              <h6>Città</h6>
+              <p> Castelfidardo</p>
+              <h6>Categoria</h6>
+              <p>Enoteca</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+390717822475">071 782 2475</a></i>
+            </td>
+          </tr>
+          <tr>
+            <td><a class="store-name" href="http://www.giampaolidolciaria.eu/">Giampaoli dolciaria</a></td>
+            <td>
+              <h6>Città</h6>
+              <p>Ancona</p>
+              <h6>Categoria</h6>
+              <p>Dolciaria</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+390718047093">071.8047093</a></i>
+            </td>
+          </tr>
 
-        <tr>
-          <td><a class="store-name" href="http://www.giampaolidolciaria.eu/">Baldi Carni</a></td>
-          <td>
-            <h6>Città</h6>
-            <p>Monsano</p>
-            <h6>Categoria</h6>
-            <p>Alimentari</p>
-          </td>
-          <td>
-            <i class="fas fa-mobile-alt"><a href="tel:+393357498195">335.7498195</a></i>
-          </td>
-        </tr>
+          <tr>
+            <td><a class="store-name" href="http://www.giampaolidolciaria.eu/">Baldi Carni</a></td>
+            <td>
+              <h6>Città</h6>
+              <p>Monsano</p>
+              <h6>Categoria</h6>
+              <p>Alimentari</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+393357498195">335.7498195</a></i>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+    <section id="ristoranti">
+      <nav id="nav-ristoranti" class="nav">
+        <h3 class="info">Ristoranti aperti che consegnano a domicilio</h3>
+        <a href="#nav-negozi">vedi anche i negozi</a>
+      </nav>
+      <table id="ristoranti">
+        <thead class="head">
+          <tr>
+            <th>Ristorante</th>
+            <th>Info</th>
+            <th>Contatto</th>
+          </tr>
+        </thead>
+        <tbody>
 
-        <tr>
-          <td><a class="store-name" href="http://www.giampaolidolciaria.eu/">Marche salumi</a></td>
-          <td>
-            <h6>Città</h6>
-            <p>Camerano</p>
-            <h6>Categoria</h6>
-            <p>Alimentari</p>
-          </td>
-          <td>
-            <i class="fas fa-mobile-alt"><a href="tel:+39071959695">071.959695</a></i>
-            <i class="fas fa-mobile-alt"><a href="tel:+393339736218">333.9736218</a></i>
-          </td>
-        </tr>
+          <tr>
+            <td><a class="store-name" href="https://www.bottegadellabirra.com/">Bottega della birra</a></td>
+            <td>
+              <h6>Città</h6>
+              <p> Castelfidardo</p>
+              <h6>Categoria</h6>
+              <p>Birra e Alimentari</p>
+            </td>
+            <td>
+              <h6>Moreno</h6>
+              <i class="fas fa-mobile-alt"><a href="tel:+393496237510">3496237510</a></i>
+              <h6>Alessandro</h6>
+              <i class="fas fa-mobile-alt"><a href="tel:+39347 9971569">3479971569</a></i>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+    <footer>
+      <script type=" text/javascript" src="//codice.shinystat.com/cgi-bin/getcod.cgi?USER=ioaspettoacasa"></script>
+      <noscript>
+        <h6><a href="http://www.shinystat.com/it/">
+            <img src="//www.shinystat.com/cgi-bin/shinystat.cgi?USER=ioaspettoacasa" alt="Statistiche gratis"
+              style="border:0px" /></a></h6>
+      </noscript>
+      <!-- Fine Codice ShinyStat -->
 
-        <tr>
-          <td><a class="store-name" href="https://www.marchesalumi.com">Marche salumi</a></td>
-          <td>
-            <h6>Città</h6>
-            <p>Camerano</p>
-            <h6>Categoria</h6>
-            <p>Alimentari</p>
-          </td>
-          <td>
-            <i class="fas fa-mobile-alt"><a href="tel:+39071959695">071.959695</a></i>
-            <i class="fas fa-mobile-alt"><a href="tel:+393339736218">333.9736218</a></i>
-          </td>
-        </tr>
-
-        <tr>
-          <td><a class="store-name" href="https://www.facebook.com/Pescheria-da-Giuseppe-372848066825019">Pescheria da
-              Giuseppe</a></td>
-          <td>
-            <h6>Città</h6>
-            <p>Camerano</p>
-            <h6>Categoria</h6>
-            <p>Pesce</p>
-          </td>
-          <td>
-            <i class="fas fa-mobile-alt"><a href="tel:+39071731366">071.731366</a></i>
-            <i class="fas fa-mobile-alt"><a href="tel:+393471134336">347.1134336</a></i>
-          </td>
-        </tr>
-
-        <tr>
-          <td><a class="store-name" href="https://www.facebook.com/Pescheria-da-Giuseppe-372848066825019">Az.Agricola
-              Mercante</a></td>
-          <td>
-            <h6>Città</h6>
-            <p>Camerano</p>
-            <h6>Categoria</h6>
-            <p>Vino</p>
-          </td>
-          <td>
-            <i class="fas fa-mobile-alt"><a href="tel:+39071732050">071.732050</a></i>
-            <i class="fas fa-mobile-alt"><a href="tel:+39336631167 ">336.631167</a></i>
-            <i class="fab fa-whatsapp"><a href="https://wa.me/+39336631167 ">336.631167</a></i>
-            <i class="fab fa-telegram"><a href="tg:39336631167 ">336.631167</a></i>
-          </td>
-        </tr>
-
-        <tr>
-          <td><a class="store-name" href="https://www.mentelocale.bio">Mente locale</a></td>
-          <td>
-            <h6>Città</h6>
-            <p>Camerano</p>
-            <h6>Categoria</h6>
-            <p>Alimentari</p>
-          </td>
-          <td>
-            <i class="fas fa-mobile-alt"><a href="tel:+393407214009">340.7214009</a></i>
-          </td>
-        </tr>
-
-        <tr>
-          <td><a class="store-name" href="https://www.mentelocale.bio">Top frutta</a></td>
-          <td>
-            <h6>Città</h6>
-            <p>Camerano</p>
-            <h6>Categoria</h6>
-            <p>Ortofrutta</p>
-          </td>
-          <td>
-            <!-- <i class="fas fa-mobile-alt"><a href="tel:+393407214009">340.7214009</a></!--> -->
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </section>
-  <section id="ristoranti">
-    <nav id="nav-ristoranti" class="nav">
-      <h3 class="info">Informazioni su ristoranti aperti che consegnano a domicilio</h3>
-      <a href="#nav-negozi">Negozi</a>
-    </nav>
-    <table id="ristoranti" style="width:100%">
-      <thead class="head">
-        <tr>
-          <th>Ristorante</th>
-          <th>Info</th>
-          <th>Contatto</th>
-        </tr>
-      </thead>
-      <tbody>
-
-        <tr>
-          <td><a class="store-name" href="https://www.bottegadellabirra.com/">Bottega della birra</a></td>
-          <td>
-            <h6>Città</h6>
-            <p> Castelfidardo</p>
-            <h6>Categoria</h6>
-            <p>Birra e Alimentari</p>
-          </td>
-          <td>
-            <h6>Moreno</h6>
-            <i class="fas fa-mobile-alt"><a href="tel:+393496237510">3496237510</a></i>
-            <h6>Alessandro</h6>
-            <i class="fas fa-mobile-alt"><a href="tel:+39347 9971569">3479971569</a></i>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </section>
-  <footer>
-    <script type=" text/javascript" src="//codice.shinystat.com/cgi-bin/getcod.cgi?USER=ioaspettoacasa"></script>
-    <noscript>
-      <h6><a href="http://www.shinystat.com/it/">
-          <img src="//www.shinystat.com/cgi-bin/shinystat.cgi?USER=ioaspettoacasa" alt="Statistiche gratis"
-            style="border:0px" /></a></h6>
-    </noscript>
-    <!-- Fine Codice ShinyStat -->
-
-  </footer>
-
+    </footer>
+  </div>
   <script src="./js/app.js"></script>
+
 </body>
 
 </html>
