added smooth scroll

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
       </div>
       <div class="bottom">
         <nav class="main-nav">
-          <a href="#nav-negozi"><i class="fas fa-hand-point-down"></i>...Negozi</a>
-          <a href="#nav-ristoranti"><i class="fas fa-hand-point-down"></i>...Ristoranti</a>
+          <a href="#nav-negozi"><i class="fas fa-hand-point-down"></i><span>Negozi</span> </a>
+          <a href="#nav-ristoranti"><i class="fas fa-hand-point-down"></i><span>Ristoranti</span></a>
       </div>
+      <p>Hai l'attività aperta e consegni a domicilio?</p>
+      <a href="#footer">mandaci le tue informazione e le inseriamo</a>
     </section>
     <section id="section2">
       <nav id="nav-negozi" class="nav">
@@ -262,7 +264,7 @@
         </tbody>
       </table>
     </section>
-    <footer>
+    <footer id="footer">
       <script type=" text/javascript" src="//codice.shinystat.com/cgi-bin/getcod.cgi?USER=ioaspettoacasa"></script>
       <noscript>
         <h6><a href="http://www.shinystat.com/it/">
