--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
         </div>
       </div>
       <div class="bottom">
+        <div>
+          <p>Hai l'attività aperta e consegni a domicilio?</p>
+          <p><a href="#footer">Contattaci</a> e inseriamo i tuoi dati altrimenti...</p>
+
+        </div>
         <nav class="main-nav">
-          <a href="#nav-negozi"><i class="fas fa-hand-point-down"></i><span>Negozi</span> </a>
-          <a href="#nav-ristoranti"><i class="fas fa-hand-point-down"></i><span>Ristoranti</span></a>
+          <a href="#nav-negozi"><i class="fas fa-hand-point-down"></i><span>vedi i Negozi</span> </a>
+          <a href="#nav-ristoranti"><i class="fas fa-hand-point-down"></i><span>vedi i Ristoranti</span></a>
       </div>
-      <p>Hai l'attività aperta e consegni a domicilio?</p>
-      <a href="#footer">mandaci le tue informazione e le inseriamo</a>
     </section>
     <section id="section2">
       <nav id="nav-negozi" class="nav">
