--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </section>
     <section id="section2">
       <nav id="nav-negozi" class="nav">
-        <h3 class="info">Negozi aperti che consegnano a domicilio</h3>
+        <h3 class="info">Negozi aperti con consegna a domicilio!</h3>
         <a href="#ristoranti">vedi anche i ristoranti</a>
       </nav>
       <table id="negozi" style="width:100%">
@@ -236,7 +236,7 @@
     </section>
     <section id="ristoranti">
       <nav id="nav-ristoranti" class="nav">
-        <h3 class="info">Ristoranti aperti che consegnano a domicilio</h3>
+        <h3 class="info">Ristoranti aperti con consegna a domicilio</h3>
         <a href="#nav-negozi">vedi anche i negozi</a>
       </nav>
       <table id="ristoranti">
@@ -250,20 +250,72 @@
         <tbody>
 
           <tr>
-            <td><a class="store-name" href="https://www.bottegadellabirra.com/">Bottega della birra</a></td>
+            <td><a class="store-name" href="https://www.labistronomia.com">La bistronomia</a></td>
             <td>
               <h6>Città</h6>
-              <p> Castelfidardo</p>
+              <p> Camerano</p>
               <h6>Categoria</h6>
-              <p>Birra e Alimentari</p>
+              <p>Ristorazione</p>
             </td>
             <td>
-              <h6>Moreno</h6>
-              <i class="fas fa-mobile-alt"><a href="tel:+393496237510">3496237510</a></i>
-              <h6>Alessandro</h6>
-              <i class="fas fa-mobile-alt"><a href="tel:+39347 9971569">3479971569</a></i>
+              <i class="fas fa-mobile-alt"><a href="tel:+393389731309">338.9731309</a></i>
+              <i class="fas fa-mobile-alt"><a href="tel:+39071959513">071.959513</a></i>
             </td>
           </tr>
+
+          <tr>
+            <td><a class="store-name" href="https://www.facebook.com/langolodelgustopamela/">L'angolo del gusto</a></td>
+            <td>
+              <h6>Città</h6>
+              <p> Camerano</p>
+              <h6>Categoria</h6>
+              <p>Pizzeria</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+393806852064 ">380.6852064</a></i>
+            </td>
+          </tr>
+
+          <tr>
+            <td><a class="store-name" href="https://www.facebook.com/langolodelgustopamela/">Ristorante Bistrò</a></td>
+            <td>
+              <h6>Città</h6>
+              <p> Camerano</p>
+              <h6>Categoria</h6>
+              <p>Pizzeria</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+39071731914">071.731914</a></i>
+            </td>
+          </tr>
+
+          <tr>
+            <td><a class="store-name" href="https://www.facebook.com/SushiSaporeDiMareOsimo/">Sapore di mare</a></td>
+            <td>
+              <h6>Città</h6>
+              <p> Osimo</p>
+              <h6>Categoria</h6>
+              <p>SUSHI</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+390717131920">071.7131920</a></i>
+            </td>
+          </tr>
+
+          <tr>
+            <td><a class="store-name" href="http://www.losteriasirolo.com/">L'osteria</a></td>
+            <td>
+              <h6>Città</h6>
+              <p> Osimo</p>
+              <h6>Categoria</h6>
+              <p>SUSHI</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+390719330942">071.9330942</a></i>
+            </td>
+          </tr>
+
+
         </tbody>
       </table>
     </section>
