added email contact

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="bottom">
         <div>
           <p>Hai l'attività aperta e consegni a domicilio?</p>
-          <p><a href="#footer">Contattaci</a> e inseriamo i tuoi dati altrimenti...</p>
+          <p><a href="mailto:info@iosapettoacasa.it">Contattaci</a> e inseriamo i tuoi dati altrimenti...</p>
 
         </div>
         <nav class="main-nav">
