--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       <div class="bottom">
         <div>
           <p>Hai l'attività aperta e consegni a domicilio?</p>
-          <p><a href="mailto:info@iosapettoacasa.it">Contattaci</a> e inseriamo i tuoi dati altrimenti...</p>
+          <p>Mandaci una email a <a href="mailto:info@iosapettoacasa.it">info@iosapettoacasa.it</a> e inseriamo i tuoi
+            dati</p>
 
         </div>
         <nav class="main-nav">
@@ -62,7 +63,19 @@
               <p>Alimentari</p>
             </td>
             <td>
-              <i class="fas fa-mobile-alt"><a href="tel:+39071 731982">071.731982</a></i>
+              <i class="fas fa-mobile-alt"><a href="tel:+39071731982">071.731982</a></i>
+            </td>
+          </tr>
+          <tr>
+            <td><a class="store-name" href="https://www.facebook.com/LardiniEnrico/">Le Bonta' della Tavola</a></td>
+            <td>
+              <h6>Città</h6>
+              <p>Camerano</p>
+              <h6>Categoria</h6>
+              <p>Macelleria</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+390717312312">071.731231</a></i>
             </td>
           </tr>
           <tr>
@@ -320,17 +333,22 @@
       </table>
     </section>
     <footer id="footer">
-      <script type=" text/javascript" src="//codice.shinystat.com/cgi-bin/getcod.cgi?USER=ioaspettoacasa"></script>
-      <noscript>
-        <h6><a href="http://www.shinystat.com/it/">
-            <img src="//www.shinystat.com/cgi-bin/shinystat.cgi?USER=ioaspettoacasa" alt="Statistiche gratis"
-              style="border:0px" /></a></h6>
-      </noscript>
-      <!-- Fine Codice ShinyStat -->
-
-    </footer>
+      <div class="desc">
+        <p>Questo sito e stato creato con l'unico scopo di tenere informate le persone sulle attività aperte e che
+          consegnano a domicilio in questo periodo di isolamento</p>
+      </div>
+      <div id="stat">
+        <script src="./js/app.js"></script>
+        <script type=" text/javascript" src="//codice.shinystat.com/cgi-bin/getcod.cgi?USER=ioaspettoacasa"></script>
+        <noscript>
+          <h6><a href="http://www.shinystat.com/it/">
+              <img src="//www.shinystat.com/cgi-bin/shinystat.cgi?USER=ioaspettoacasa" alt="Statistiche gratis"
+                style="border:0px" /></a></h6>
+        </noscript>
+        <!-- Fine Codice ShinyStat -->
+      </div>
   </div>
-  <script src="./js/app.js"></script>
+  </footer>
 
 </body>
 
