added another restaurant

--- a/index.html
+++ b/index.html
@@ -321,10 +321,38 @@
               <h6>Città</h6>
               <p> Osimo</p>
               <h6>Categoria</h6>
-              <p>SUSHI</p>
+              <p>Pizzeria</p>
             </td>
             <td>
               <i class="fas fa-mobile-alt"><a href="tel:+390719330942">071.9330942</a></i>
+            </td>
+          </tr>
+
+          <tr>
+            <td><a class="store-name" href="https://www.facebook.com/lacantinettadelconero">La Cantinetta del Conero</a>
+            </td>
+            <td>
+              <h6>Città</h6>
+              <p> Osimo</p>
+              <h6>Categoria</h6>
+              <p>Pizzeria</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+390717108651">071.7108651</a></i>
+            </td>
+          </tr>
+
+          <tr>
+            <td><a class="store-name" href="https://www.facebook.com/cecconibevande/">Cecconi</a>
+            </td>
+            <td>
+              <h6>Città</h6>
+              <p> Osimo</p>
+              <h6>Categoria</h6>
+              <p>Bibite e altro...</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+393663552702">366.3552702</a></i>
             </td>
           </tr>
 
