--- a/index.html
+++ b/index.html
@@ -358,7 +358,8 @@
     </section>
     <footer id="footer">
       <div class="desc">
-        <p>Questo sito e stato creato con l'unico scopo di tenere informate le persone sulle attività aperte e che
+        <p>Questo sito e stato creato da Luca Isolani e <a href="https://www.facebook.com/cretu.l.adrian">Cretu
+            Laurentiu Adrian</a> con l'unico scopo di tenere informate le persone sulle attività aperte e che
           consegnano a domicilio in questo periodo di isolamento</p>
       </div>
       <div id="stat">
