added facebook og

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     integrity=" sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin=" anonymous"></script>
   <script data-ad-client="ca-pub-3089972453962957" async
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+  <meta property="og:url" content="www.ioaspettoacasa.it" />
+  <meta property="og:title" content="#Ioaspettoacasa" />
+  <meta property="og:description" content="Lista aggiornata attività che effetuano consegna a domicilio nella zona di camerano." />
+  <meta property="og:image" content="./img/sfondo-colori.jpg" />
+
   <title>Io aspetto a casa</title>
 </head>
 
