--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
   <meta property="og:url" content="www.ioaspettoacasa.it" />
-  <meta property="og:title" content="#Ioaspettoacasa" />
-  <meta property="og:description" content="Lista aggiornata attività che effetuano consegna a domicilio nella zona di camerano." />
+  <meta property="og:title" content="#ioaspettoacasa" />
+  <meta property="og:description"
+    content="Lista aggiornata attività che effetuano consegna a domicilio nella zona di camerano." />
   <meta property="og:image" content="./img/sfondo-colori.jpg" />
 
   <title>Io aspetto a casa</title>
