--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
   <meta charset="UTF-8">
@@ -40,7 +40,6 @@
           <p>Hai l'attività aperta e consegni a domicilio?</p>
           <p>Mandaci una email a <a href="mailto:info@iosapettoacasa.it">info@iosapettoacasa.it</a> e inseriamo i tuoi
             dati</p>
-
         </div>
         <nav class="main-nav">
           <a href="#nav-negozi"><i class="fas fa-hand-point-down"></i><span>vedi i Negozi</span> </a>
@@ -334,18 +333,6 @@
             </td>
           </tr>
 
-          <tr>
-            <td><a class="store-name" href="http://www.losteriasirolo.com/">L'osteria</a></td>
-            <td>
-              <h6>Città</h6>
-              <p> Osimo</p>
-              <h6>Categoria</h6>
-              <p>Pizzeria</p>
-            </td>
-            <td>
-              <i class="fas fa-mobile-alt"><a href="tel:+390719330942">071.9330942</a></i>
-            </td>
-          </tr>
 
           <tr>
             <td><a class="store-name" href="https://www.facebook.com/lacantinettadelconero">La Cantinetta del Conero</a>
@@ -360,6 +347,33 @@
               <i class="fas fa-mobile-alt"><a href="tel:+390717108651">071.7108651</a></i>
             </td>
           </tr>
+          <tr>
+            <td><a class="store-name" href="https://www.facebook.com/lacantinettadelconero">L'Angolo Dei Sapori Di
+                Savoretti Milva</a>
+            </td>
+            <td>
+              <h6>Città</h6>
+              <p> Osimo</p>
+              <h6>Categoria</h6>
+              <p>Pizzeria</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+390717132115">071.7132115</a></i>
+            </td>
+          </tr>
+          <tr>
+            <td><a class="store-name" href="http://www.losteriasirolo.com/">L'osteria</a></td>
+            <td>
+              <h6>Città</h6>
+              <p> Sirolo</p>
+              <h6>Categoria</h6>
+              <p>Pizzeria</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+390719330942">071.9330942</a></i>
+            </td>
+          </tr>
+
         </tbody>
       </table>
     </section>
