--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html lang="it">
 
@@ -157,6 +158,18 @@
             </td>
           </tr>
           <tr>
+            <td><a class="store-name" href="#">MARKET SI con TE  di TRAVERSA</a></td>
+            <td>
+              <h6>Città</h6>
+              <p>Camerano</p>
+              <h6>Categoria</h6>
+              <p>Alimentari</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+390717304003">071.7304003 </a></i>
+            </td>
+          </tr>
+          <tr>
             <td><a class="store-name" href="https://www.maxigarden.it">Maxigarden</a></td>
             <td>
               <h6>Città</h6>
@@ -248,6 +261,19 @@
             </td>
             <td>
               <i class="fas fa-mobile-alt"><a href="tel:+393663552702">366.3552702</a></i>
+            </td>
+          </tr>
+          <tr>
+            <td><a class="store-name" href="#">Panetteria moderna Sopranzetti</a>
+            </td>
+            <td>
+              <h6>Città</h6>
+              <p> Osimo</p>
+              <h6>Categoria</h6>
+              <p>Pane e pizza</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+390717100135">071.7100135</a></i>
             </td>
           </tr>
           <tr>
@@ -371,6 +397,18 @@
             </td>
             <td>
               <i class="fas fa-mobile-alt"><a href="tel:+390719330942">071.9330942</a></i>
+            </td>
+          </tr>
+          <tr>
+            <td><a class="store-name" href="#">Trattoria pizzeria da Luca</a></td>
+            <td>
+              <h6>Città</h6>
+              <p> Numana</p>
+              <h6>Categoria</h6>
+              <p>Pizzeria</p>
+            </td>
+            <td>
+              <i class="fas fa-mobile-alt"><a href="tel:+393474182254">347.4182254</a></i>
             </td>
           </tr>
 
